<resources>
    <string name="app_name">TrabalhoQS</string>
    <string name="menu_principal">Menu principal</string>
    <string name="sair">Sair</string>
    <string name="registar_pedido">Registar Pedido</string>
    <string name="pass">Password</string>
    <string name="aceitar">Aceitar</string>
    <string name="recusar">Recusar</string>
    <string name="tipo_recurso">Tipo de recurso</string>
    <string name="materiais">Materiais</string>
    <string name="componentes">Componentes</string>
    <string name="consumiveis">Consumiveis</string>
    <string name="login">Login</string>
    <string name="numero">Numero</string>
    <string name="universidade_portucalense">Universidade Portucalense</string>
    <string name="password">Password</string>
    <string name="requisicoes">Requisições</string>
    <string name="pedidos_de_acesso">Pedidos de acesso</string>
    <string name="listar_materais">Listar Materais</string>
    <string name="pedir_permissao">Pedir Permissão</string>
</resources>